compiler/testData/asJava/lightClasses/compilationErrors/ActualTypeAliasCustomJvmPackageName.java
public final class ActualTypeAliasCustomJvmPackageNameKt /* a.b.c.ActualTypeAliasCustomJvmPackageNameKt*/ {
}